label task wrap, build fixes, responsive for label task

--- a/frontend/src/pages/manage.module.scss
+++ b/frontend/src/pages/manage.module.scss
@@ -17,10 +17,14 @@
         border-radius: 0px;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
+        gap: 10px;
         backdrop-filter: blur(10px);
         color: white;
         font-size: 1.2rem;
+        .logo {
+            width: 25px;
+        }
         span {
             font-weight: bold;
         }
